--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p>hello</p>
+    <p>hello</p> 
+    <!-- flex 2ta  turi bor-->
+    <!--Flex container  -->
+    <!-- Flex element -->
+
+
+    <div class="flex-container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
+
 </body>
 </html>
