--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div>1</div>
         <div>2</div>
         <div>3</div>
+        <!-- <div>3</div>
         <div>3</div>
         <div>3</div>
         <div>3</div>
@@ -28,8 +29,7 @@
         <div>3</div>
         <div>3</div>
         <div>3</div>
-        <div>3</div>
-    </div>
+    </div> -->
 
 </body>
 </html>
