--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p>hello</p> 
+    <!-- <p>hello</p>  -->
     <!-- flex 2ta  turi bor-->
     <!--Flex container  -->
     <!-- Flex element -->
@@ -16,6 +16,8 @@
     <div class="flex-container">
         <div>1</div>
         <div>2</div>
+        <div>3</div>
+        <div>3</div>
         <div>3</div>
         <!-- <div>3</div>
         <div>3</div>
@@ -26,10 +28,8 @@
         <div>3</div>
         <div>3</div>
         <div>3</div>
-        <div>3</div>
-        <div>3</div>
-        <div>3</div>
-    </div> -->
+        <div>3</div> -->
+    </div>
 
 </body>
 </html>
